반응형 박스 ui 작업내역

--- a/ResponsiveBox/index.html
+++ b/ResponsiveBox/index.html
@@ -2,10 +2,62 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Responsive Box Model</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
 </head>
 <body>
+	<div class="container">
+		<div class="box">
+			<div class="thumb">
+				<img src="https://placeimg.com/480/480/any" />
+			</div>
+			<div class="details">
+				<div class="content">
+					<i class="fab fa-500px"></i>
+					<h3>Lorem</h3>
+					<a href="#">Read More</a>
+				</div>
+			</div>
+		</div>
+		<div class="box">
+			<div class="thumb">
+				<img src="https://placeimg.com/480/480/any" />
+			</div>
+			<div class="details">
+				<div class="content">
+					<i class="fab fa-accessible-icon"></i>
+					<h3>Lorem</h3>
+					<a href="#">Read More</a>
+				</div>
+			</div>
+		</div>
+		<div class="box">
+			<div class="thumb">
+				<img src="https://placeimg.com/480/480/any" />
+			</div>
+			<div class="details">
+				<div class="content">
+					<i class="fab fa-accusoft"></i>
+					<h3>Lorem</h3>
+					<a href="#">Read More</a>
+				</div>
+			</div>
+		</div>
+		<div class="box">
+			<div class="thumb">
+				<img src="https://placeimg.com/480/480/any" />
+			</div>
+			<div class="details">
+				<div class="content">
+					<i class="fab fa-algolia"></i>
+					<h3>Lorem</h3>
+					<a href="#">Read More</a>
+				</div>
+			</div>
+		</div>
+	</div>
 	
 </body>
 </html>
