--- a/javascriptEx/index_jh.html
+++ b/javascriptEx/index_jh.html
@@ -1,27 +1,12 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
 </head>
 <body>
-
-	<!--
-	<div>당첨 숫자</div>	
-	<div id="결과창"></div>		
-	<div>보너스</div>	
-	<div class="보너스"></div>			
-	-->
-
-
-	<!-- <script src="section01.js"></script> -->
-	<!-- <script src="section02.js"></script> -->
-	<!-- <script src="section03.js"></script> -->
 	<script src="section04.js"></script>
-	<!-- <script src="section05.js"></script> -->
-
 	
-
 	<style>
 		table {
 			position: absolute;
@@ -42,6 +27,5 @@
 			cursor: pointer;
 		}
 	</style>
-	
 </body>
 </html>
