--- a/javascriptEx/index_jh.html
+++ b/javascriptEx/index_jh.html
@@ -5,7 +5,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<script src="section04.js"></script>
+	<script src="section04_jh.js"></script>
 	
 	<style>
 		table {
