--- a/javascriptEx/index.html
+++ b/javascriptEx/index.html
@@ -6,23 +6,47 @@
 </head>
 <body>
 
-	<!--
+	
 	<div>당첨 숫자</div>	
 	<div id="결과창"></div>		
 	<div>보너스</div>	
 	<div class="보너스"></div>			
-	-->
-
-
+	
+<!-- <div id="computer"></div>
+<button class="btn">가위</button>
+<button class="btn">바위</button>
+<button class="btn">보</button>
+ -->
 	<!-- <script src="section01.js"></script> -->
 	<!-- <script src="section02.js"></script> -->
 	<!-- <script src="section03.js"></script> -->
-	<script src="section04.js"></script>
-	<!-- <script src="section05.js"></script> -->
+	<!-- <script src="section04_jh.js"></script> -->
+	<script src="section05_jh.js"></script>
+	<!-- <script src="section06.js"></script> -->
 
 	
 
+	
 	<style>
+		#computer{
+			width: 150px;
+			height: 200px;
+		}
+		.result{
+			position: absolute;
+			top: 200px;
+			left: 50%;
+			top: 50%;
+			transform: translate(-50%, -50%);
+			margin-top: -225px;
+			text-align: center;
+			font-size: 30px;
+		}
+		body{
+			background: #2b2b2b;
+			color: #fff;
+			text-transform: uppercase;
+		}
 		table {
 			position: absolute;
 			left: 50%;
