--- a/javascriptEx/index.html
+++ b/javascriptEx/index.html
@@ -6,125 +6,90 @@
 </head>
 <body>
 
-	<!-- 5 -->
-<!-- 	<div>당첨 숫자</div>	
-	<div id="결과창"></div>		
-	<div>보너스</div>	
-	<div class="보너스"></div>		 -->	
-	
-	<!-- 6 -->
-<!-- <div id="computer"></div>
-<div class="buttonWrap">
-	<button class="btn">가위</button>
-	<button class="btn">바위</button>
-	<button class="btn">보</button>
-</div>
-<div id="result"></div>
-<button id="re">다시</button> -->
-
-
-<style>
-	body{
-		background: #2b2b2b;
-		color: #fff;
-	}
-	table{
-		border-collapse: collapse;
-	}
-	td{
-		border: 1px solid #ccc;
-		width: 20px;
-		height: 20px;
-		line-height: 20px;
-		text-align: center;
-		background: #444;
-	}	
-	td.opened{
-		background: white;
-		color: #444;
-	}
-</style>
-
-
-<input id="hor" type="number" placeholder="가로" value="10">
-<input id="ver" type="number" placeholder="세로" value="10">
-<input id="mine" type="number" placeholder="지뢰" value="20">
-<button id="exec">실행</button>
-<table id="table">
-	<thead>
-		<tr>
-			<td><span id="timer">0</span>초</td>
-		</tr>
-	</thead>
-	<tbody></tbody>
-</table>
-<div id="result"></div>
-
-
-
-	<!-- <script src="section01.js"></script> -->
-	<!-- <script src="section02.js"></script> -->
-	<!-- <script src="section03.js"></script> -->
-	<!-- <script src="section04_jh.js"></script> -->
-	<!-- <script src="section05_jh.js"></script> -->
-	<!-- <script src="section06_jh.js"></script> -->
-	<script src="section07_jh.js"></script>
-
-	<!-- 
 	<style>
-		body{
-			text-align: center;
-		}
-		button:focus{
-			background: yellow;
-		}
-		#computer{ 
-			width: 150px;
-			height: 200px;
-			line-height: 200px;
-			margin: 0 auto;
-			font-size: 30px;
-			font-weight: 600;
-		}
-		#result{
-			height: 300px;
-			line-height: 300px;
-			font-size: green;
-		}
-		.result{
-			position: absolute;
-			top: 200px;
-			left: 50%;
-			top: 50%;
-			transform: translate(-50%, -50%);
-			margin-top: -225px;
-			text-align: center;
-			font-size: 30px;
-		}
 		body{
 			background: #2b2b2b;
 			color: #fff;
-			text-transform: uppercase;
 		}
-		table {
-			position: absolute;
-			left: 50%;
-			top: 50%;
-			transform: translate(-50%, -50%);
-			border:1px solid #ccc;
+		ul{
+			padding: 0;
+		}
+		li{
+			list-style: none;
+			margin: 10px 0;
+		}
+		label{
+			display: block;
+			float: left;
+			width: 150px;
+		}
+		input{			
+			border : 1px solid #ccc;
+			height: 26px;
+			line-height: 26px;
+			box-sizing: border-box;
+		}
+		button{
+			display: block;
+			width: 300px;
+			height: 50px;
+			background: #222;
+			color: #fff;
+			font-size: 16px;
+			cursor: pointer;
+		}
+		table{
+			margin: 30px;
+			border: 1px solid #ccc;
 			border-collapse: collapse;
 		}
 		td{
-			height: 100px;
-			line-height: 100px;
+			border: 1px dashed rgba(0,0,0,0.1);
+			width: 20px;
+			height: 20px;
+			line-height: 20px;
 			text-align: center;
-			width: 100px;
-			font-size: 40px;
-			font-weight: bold;
-			border:1px solid #ccc;
+			background: #444;
 			cursor: pointer;
 		}
+		td.over{
+			background: #DD352E url(https://image.flaticon.com/icons/svg/1256/1256692.svg) no-repeat center;
+			background-size: 60%;
+		}
+
+		td.flagCheck{
+			background: #fff no-repeat center;
+			background-size: 60%;
+			background-image: url(https://image.flaticon.com/icons/svg/148/148882.svg)
+		}
+		td.questionCheck{
+			background: #fff url(https://image.flaticon.com/icons/svg/1304/1304035.svg) no-repeat center;
+			background-size: 60%;
+		}	
+		td.opened{
+			background: #fff;
+			color: #444;
+		}
 	</style>
-	 -->
+
+	<ul>
+		<li><label for="">가로열 :</label> <input id="hor" type="number" placeholder="가로" value="10"></li>
+		<li><label for="">세로 : </label> <input id="ver" type="number" placeholder="세로" value="10"></li>
+		<li><label for="">지뢰갯수 : </label> <input id="mine" type="number" placeholder="지뢰" value="10"></li>
+	</ul>
+	
+	<button id="exec">실행</button>
+	<table id="table">
+		<thead>
+			<tr>
+				<td><span id="timer">0</span>초</td>
+			</tr>
+		</thead>
+		<tbody></tbody>
+	</table>
+	<div id="result"></div>
+
+	<script src="section07_jh.js"></script>
+
 </body>
 </html>
