--- a/iPhoneX.htm
+++ b/iPhoneX.htm
@@ -114,7 +114,7 @@ body {
         });
 
         elemPhone = document.createElement('img');
-        elemPhone.src = 'phone.png';
+        elemPhone.src = 'https://studiomeal.com/code/iphonex/phone.png';
         elemPhone.addEventListener('load', function () {
             drawCanvas();
         });
