--- a/canvasPractice/index01.html
+++ b/canvasPractice/index01.html
@@ -16,7 +16,7 @@
             <select name="" id="" onchange="colorChoose(this.value)">
                 <option value="black">black</option>
                 <option value="blue">blue</option>
-                <option value="red">red</option>
+                <!-- <option value="red">red</option> -->
             </select>
         </div>
         <div class="canvasArea">
