--- a/canvasPractice/index01.html
+++ b/canvasPractice/index01.html
@@ -14,8 +14,8 @@
             <button id="mode">Canvas line mode</button>
             <button onclick="histroyBack()">histroyBack</button>
             <select name="" id="" onchange="colorChoose(this.value)">
-                <option value="black">black</option>
-                <option value="blue">blue</option>
+                <!-- <option value="black">black</option> -->
+                <!-- <option value="blue">blue</option> -->
                 <!-- <option value="red">red</option> -->
             </select>
         </div>
